--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Telegram Files Store Bot",
-    "description": "A Telegram Files Store Bot in Pyrogram by @AbirHasan2005",
+    "description": "A Telegram Files Store Bot in Pyrogram by @Om56577",
     "keywords": [
         "telegram",
         "files",
